load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//bazel:mc_program.bzl", "mc_service_layer")

# images — the base + flavor images, built as DETERMINISTIC pkg_tar with NO manual staging: no
# remove_dir_all, no ordering hazard, no fs::copy into a source tree — the three memcontainers build
# wounds, all closed by the dependency graph (B1). Fixed mtime/uid/gid makes the image
# content-addressed and snapshots exact (A8). ONE pkg_tar is consumed by both the host CLI and
# the e2e tests, so the two byte-identical tar implementations collapse into one.
#
# Three stacked layers, each inheriting the one below via pkg_tar `deps`:
#   rootfs  — just /etc/profile (internal).
#   base    — rootfs + /bin/{sh,pkgfsd,tools} + /svc/tools + /tools + /etc/services.d: the shared substrate.
#   minimal — base + the four MINIMAL coreutils boxes (the curated ~15) + their /bin symlinks.
#   posix   — base + the four FULL coreutils boxes (everything) + their /bin symlinks.

# rootfs — just /etc/profile (the kernel mounts it at /). The internal skeleton `base` layers onto.
pkg_tar(
    name = "rootfs",
    srcs = glob(["rootfs/**"]),
    strip_prefix = "rootfs",  # rootfs/etc/profile → /etc/profile
    owner = "0.0",  # determinism: root.root + fixed portable_mtime → content-addressable
    visibility = ["//memcontainers/tests/e2e:__pkg__"],
)

# The base tool-plane service layer — /bin/tools, /bin/adapters, and their /etc/services.d fragments.
# Lazy: discovery, calls, and adapter compilation pay resident-service startup only when a VM uses the
# tool plane, while every image inherits the capability.
mc_service_layer(
    name = "base_tools_layer",
    lazy = [
        "//memcontainers/programs/adapters:adapters",
        "//memcontainers/programs/tools:tools",
    ],
)

# The base-owned namespace roots. Rootfs owns `/etc`; this layer adds only the leaves service/tool
# layers need, so later layers carry fragments or catalogs without duplicating directory entries.
pkg_tar(
    name = "base_dirs",
    create_parents = False,
    empty_dirs = [
        "etc/services.d",
        "etc/tools",
        "tools",
    ],
    modes = {
        "etc/services.d": "0755",
        "etc/tools": "0755",
        "tools": "0755",
    },
    owner = "0.0",
)

# base — rootfs + the SYSTEM binaries/service faces: /bin/sh (the guest shell, boots as pid 1),
# /bin/tools plus /svc/tools and /tools (catalog/search/call broker), /bin/adapters plus
# /svc/adapters (shared parser/invoker service for adapter-backed tools), and /bin/pkgfsd (the /pkg
# daemon). Base owns the service/tool directories; service layers add only binaries and fragments.
# A real but command-less shell, the substrate BOTH flavors build on (SYSTEMS.md) — NOT a shipped flavor
# on its own (no coreutils — "make your own harness"); minimal/posix add a command set by layering on top.
pkg_tar(
    name = "base",
    files = {
        "//memcontainers/programs/sh:sh": "/bin/sh",
        "//memcontainers/programs/pkgfsd:pkgfsd": "/bin/pkgfsd",
    },
    owner = "0.0",
    deps = [":rootfs", ":base_dirs", ":base_tools_layer"],
    visibility = ["//visibility:public"],
)

# /bin/<applet> → its LEAST-PRIVILEGE box, generated by mc-roster from the boxes' mc_applets rosters
# (boxes in ASCENDING tier order → the lowest box that carries each applet wins). A single source, so
# /bin can't drift from what the boxes dispatch. One roster per flavor — the boxes differ.
genrule(
    name = "coreutils_symlinks",
    srcs = [
        "//memcontainers/programs/coreutils:mcbox-isolated_opt",
        "//memcontainers/programs/coreutils:mcbox-readonly_opt",
        "//memcontainers/programs/coreutils:mcbox-readwrite_opt",
        "//memcontainers/programs/coreutils:mcbox-full_opt",
    ],
    outs = ["coreutils_symlinks.tar"],
    cmd = "$(execpath //bazel/tools/mc-roster) " +
          "$(execpath //memcontainers/programs/coreutils:mcbox-isolated_opt) mcbox-isolated " +
          "$(execpath //memcontainers/programs/coreutils:mcbox-readonly_opt) mcbox-readonly " +
          "$(execpath //memcontainers/programs/coreutils:mcbox-readwrite_opt) mcbox-readwrite " +
          "$(execpath //memcontainers/programs/coreutils:mcbox-full_opt) mcbox-full $@",
    tools = ["//bazel/tools/mc-roster"],
)

# The minimal flavor's symlinks — same mc-roster tool, over the four MINIMAL boxes (so /bin/<applet>
# → /bin/mcbox-min-<tier>).
genrule(
    name = "minimal_symlinks",
    srcs = [
        "//memcontainers/programs/coreutils:mcbox-min-isolated_opt",
        "//memcontainers/programs/coreutils:mcbox-min-readonly_opt",
        "//memcontainers/programs/coreutils:mcbox-min-readwrite_opt",
        "//memcontainers/programs/coreutils:mcbox-min-full_opt",
    ],
    outs = ["minimal_symlinks.tar"],
    cmd = "$(execpath //bazel/tools/mc-roster) " +
          "$(execpath //memcontainers/programs/coreutils:mcbox-min-isolated_opt) mcbox-min-isolated " +
          "$(execpath //memcontainers/programs/coreutils:mcbox-min-readonly_opt) mcbox-min-readonly " +
          "$(execpath //memcontainers/programs/coreutils:mcbox-min-readwrite_opt) mcbox-min-readwrite " +
          "$(execpath //memcontainers/programs/coreutils:mcbox-min-full_opt) mcbox-min-full $@",
    tools = ["//bazel/tools/mc-roster"],
)

# minimal — base + the four MINIMAL boxes (the curated ~15: the carry-both builtin twins + core file
# ops) + their symlinks. Each /bin/<applet> routes to its least-privilege mcbox-min-<tier>.
pkg_tar(
    name = "minimal",
    create_parents = False,
    files = {
        "//memcontainers/programs/coreutils:mcbox-min-isolated_opt": "/bin/mcbox-min-isolated",
        "//memcontainers/programs/coreutils:mcbox-min-readonly_opt": "/bin/mcbox-min-readonly",
        "//memcontainers/programs/coreutils:mcbox-min-readwrite_opt": "/bin/mcbox-min-readwrite",
        "//memcontainers/programs/coreutils:mcbox-min-full_opt": "/bin/mcbox-min-full",
    },
    owner = "0.0",
    deps = [":base", ":minimal_symlinks"],
    visibility = ["//visibility:public"],
)

# posix — base + ALL FOUR full per-tier coreutils boxes (every command), each /bin symlink routed to
# its least-privilege box. The boxes are DISJOINT (each carries only its tier's applets); the /bin
# routing spawns every command from its lowest box.
pkg_tar(
    name = "posix",
    create_parents = False,
    files = {
        "//memcontainers/programs/coreutils:mcbox-isolated_opt": "/bin/mcbox-isolated",
        "//memcontainers/programs/coreutils:mcbox-readonly_opt": "/bin/mcbox-readonly",
        "//memcontainers/programs/coreutils:mcbox-readwrite_opt": "/bin/mcbox-readwrite",
        "//memcontainers/programs/coreutils:mcbox-full_opt": "/bin/mcbox-full",
    },
    owner = "0.0",
    deps = [":base", ":coreutils_symlinks"],
    visibility = ["//visibility:public"],
)

# loom — posix + the Luau pair, one-binary domain services. The first NON-coreutils flavor:
# posix's full userland plus the stamped, pure-mc luau interpreter (mc_tier=full, 256 MiB · 2T · 40k,
# json/hash/time/string batteries embedded) and luau-analyze type checker (256 MiB · 400B · 40k).
pkg_tar(
    name = "loom",
    create_parents = False,
    empty_dirs = [
        "lib",
        "lib/luau",
        "skills",
    ],
    files = {
        "//memcontainers/programs/luau/glue:luau": "/bin/luau",
        "//memcontainers/programs/luau/glue:luau-analyze": "/bin/luau-analyze",
        # The agent-facing skill docs ride the flavor (not the binary) — luau + the doc generators.
        "//memcontainers/programs/luau/skills:luau.md": "/skills/luau.md",
        "//memcontainers/programs/luau/skills:docx.md": "/skills/docx.md",
        "//memcontainers/programs/luau/skills:tools.md": "/skills/tools.md",
        "//memcontainers/programs/luau/skills:xlsx.md": "/skills/xlsx.md",
        "//memcontainers/programs/luau/skills:pptx.md": "/skills/pptx.md",
    },
    owner = "0.0",
    deps = [":posix"],
    visibility = ["//visibility:public"],
)

# svc-test — the resident-service primitive proof image (SYSTEMS.md): loom (the shell + /bin/luau)
# + the svc example/test services /bin/kv (the warm key-value demo) and /bin/crashloop (a deliberately-
# broken negative control), plus GENERATED /etc/services.d fragments. On LOOM (not base) so the e2e proves
# DUAL behavior (the SAME warm kv reached from the CLI `kv get` AND from Luau `sys.svc`), warm state
# across calls, crash-only recovery, oversize survival, and bounded activation failure — before sqlite.
# The svc layer — /bin/kv + /bin/crashloop + GENERATED /etc/services.d fragments, all derived from each
# service's McProgramInfo (codex #2): the install path and the manifest's binary field are written once,
# from one name, so they cannot drift. kv is eager (activated at boot — proves eager activation);
# crashloop is lazy — a deliberately-broken negative control that crashes before svc_serve, so a connect
# exercises the kernel's bounded activation-failure path (codex #4).
mc_service_layer(
    name = "svc_test_layer",
    eager = ["//memcontainers/programs/examples/kv:kv"],
    lazy = ["//memcontainers/programs/examples/crashloop:crashloop"],
)

pkg_tar(
    name = "svc_test",
    create_parents = False,
    owner = "0.0",
    deps = [":loom", ":svc_test_layer"],
    visibility = ["//visibility:public"],
)

# atlas — the data-intelligence flavor: loom + the sqlite resident SERVICE (the Zig-glue lane). Adds
# /bin/sqlite (the warm service binary, stamped + attested), the /etc/services.d fragment that activates it
# at boot, the require("sqlite") library at /lib/luau/sqlite.luau, and the sqlite skill at /skills. The
# first flavor with a domain SERVICE, not just CLI tools (SYSTEMS.md). (sqlite-vec lands here later.)
# The sqlite service layer — /bin/sqlite + its GENERATED /etc/services.d fragment, both derived from sqlite's
# McProgramInfo (codex #2). lazy (the default activation model): atlas spawns sqlite on the first
# svc_connect, not at boot.
mc_service_layer(
    name = "atlas_layer",
    lazy = ["//memcontainers/programs/sqlite/glue:sqlite"],
)

pkg_tar(
    name = "atlas",
    create_parents = False,
    files = {
        "//memcontainers/programs/sqlite/lib:sqlite.luau": "/lib/luau/sqlite.luau",
        "//memcontainers/programs/sqlite/skills:sqlite.md": "/skills/sqlite.md",
    },
    owner = "0.0",
    deps = [":loom", ":atlas_layer"],
    visibility = ["//visibility:public"],
)

# paper — the document-automation flavor: loom + the typst resident SERVICE (the Rust-std-wasi lane).
# Adds /bin/typst (the warm service binary, stamped + attested), the /etc/services.d fragment that activates
# it, the require("typst") library at /lib/luau/typst.luau, the typst skill at /skills, and the baseline
# faces under /usr/share/fonts (the separated font layer — SYSTEMS.md; the engine carries no fonts
# and scans this at startup). The second domain flavor (after atlas's sqlite), and the first Rust-std
# service.
# The typst service layer — /bin/typst + its GENERATED /etc/services.d fragment, both derived from typst's
# McProgramInfo. lazy (atlas's model): paper spawns typst on the first svc_connect, not at boot.
mc_service_layer(
    name = "paper_layer",
    lazy = ["//memcontainers/programs/typst/glue:typst"],
)

pkg_tar(
    name = "paper",
    create_parents = False,
    files = {
        "//memcontainers/programs/typst/lib:typst.luau": "/lib/luau/typst.luau",
        "//memcontainers/programs/typst/skills:typst.md": "/skills/typst.md",
    },
    owner = "0.0",
    # loom (shell + /bin/luau) + the typst service layer + the /usr/share/fonts baseline faces.
    deps = [":loom", ":paper_layer", "//memcontainers/programs/typst/fonts:typst_fonts_tar"],
    visibility = ["//visibility:public"],
)
