load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

# shcore — the OS-agnostic shell engine (SYSTEMS.md: the one legitimate native-test
# home). Pure logic — no kernel, no syscalls — so it builds for the host and its
# layers are unit-tested directly. `no_std` for the guest build (#![cfg_attr(not(test),
# no_std)]); `std` under cfg(test) so the same sources run on the host test runner.
#
# Port status (Step 2): the lexer (word, token) has landed; ast/parser/expand/glob/
# arith/exec/os follow. The library grows as each module group is ported.

rust_library(
    name = "shcore",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    # The `mc` signal/tier/stopped constants come straight from the generated
    # contract (single source of truth, B2) — os.rs consumes them, no duplication.
    deps = ["//memcontainers/contracts:constants_rust"],
    visibility = ["//visibility:public"],
)

# Native unit tests for the pure layers — legitimate here ONLY because shcore is not
# the kernel (A2). Builds the crate with cfg(test) (so std is available) and runs the
# in-module #[cfg(test)] tests.
rust_test(
    name = "test",
    crate = ":shcore",
    edition = "2021",
    size = "small",
)
