load("@rules_zig//zig:defs.bzl", "zig_library")

# shcore — the canonical Zig implementation of the OS-agnostic shell core.
# Consumers bind its ShellOs boundary to their process/filesystem layer.

SHCORE_SRCS = [
    "src/arith.zig",
    "src/ast.zig",
    "src/builtins.zig",
    "src/echo.zig",
    "src/exec.zig",
    "src/expand.zig",
    "src/glob.zig",
    "src/os.zig",
    "src/parser.zig",
    "src/printf.zig",
    "src/testexpr.zig",
    "src/token.zig",
    "src/word.zig",
]

zig_library(
    name = "lib",
    import_name = "shcore",
    main = "src/shcore.zig",
    srcs = SHCORE_SRCS,
    deps = ["//memcontainers/contracts:constants_zig"],
    visibility = ["//visibility:public"],
)
