load("@rules_rust//rust:defs.bzl", "rust_library", "rust_static_library")
load("//bazel:wasm32_build_test.bzl", "wasm32_build_test")

# wasi-adapter — a guest-side WASI preview1 shim implemented over `mc_sys_*` (SYSTEMS.md),
# ported from memcontainers crates/wasi/adapter. It DEFINES the `wasi_snapshot_preview1` functions
# so the conversion link-injects it into a wasm32-wasi box and rewrites the box's WASI imports to
# `mc` — the box then imports ONLY `mc` (A4: WASI exists only as a guest adapter, never in the
# kernel). It uses the dependency-free generated bindings (constants_rust + mc_rust), never
# //memcontainers/sysroot, whose `#[panic_handler]` would collide with a tool's std at link time.
rust_library(
    name = "wasi_adapter",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "wasi",
    edition = "2021",
    # codegen-units=1 ⇒ the rlib holds a SINGLE relocatable object, which the conversion extracts
    # and link-injects (memcontainers does the same via `cargo rustc --emit=obj`).
    rustc_flags = ["-Ccodegen-units=1"],
    # No native build (no_std + mc imports + wasi exports); reached via the conversion + the gate.
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "//memcontainers/contracts:constants_rust",  # errno + O_*/SEEK_* constants (projected)
        "//memcontainers/contracts:mc_rust",  # mc_syscall_table! → the `mc` import block (projected)
    ],
)

# The adapter's single relocatable wasm object, pulled out of the rlib (an ar archive). This is
# the link-injection input: passed to a box's link via -Clink-arg, wasm-ld merges it (correctly
# relocating the adapter's FD-table state into the box's memory) and resolves the box's
# __imported_wasi_* imports to the adapter's definitions.
genrule(
    name = "wasi_adapter_obj",
    srcs = [":wasi_adapter"],
    outs = ["wasi_adapter.o"],
    cmd = "RL=$$(realpath $(execpath :wasi_adapter)); D=$$(mktemp -d); (cd $$D && ar x $$RL); cp $$D/*.o $@",
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

# A SELF-CONTAINED staticlib of the adapter (crate-type=staticlib): rustc bundles the core funcs it
# references (slice_index_fail, unwrap_failed, …) alongside its #[panic_handler], with NO liballoc
# (the adapter is no_std + dependency-free). The rust mc_box link-injects the bare OBJECT (its Rust
# box supplies core/alloc); the NON-Rust domain tools (luau/sqlite/typst) have no Rust runtime, so
# they link THIS instead — luau's wasi imports pull the adapter member, which self-resolves.
rust_static_library(
    name = "wasi_adapter_staticlib",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "wasi",
    # `standalone` turns on the adapter's own #[panic_handler] — required for a final staticlib with
    # no surrounding Rust runtime (the no-Rust domain tools).
    crate_features = ["standalone"],
    edition = "2021",
    rustc_flags = ["-Ccodegen-units=1"],
    tags = ["manual"],
    # The standalone #[panic_handler] calls core::arch::wasm32::unreachable() — this crate only
    # compiles for wasm32. Without this, `bazel test //...` (host config) builds it via its non-manual
    # cc_object consumer (//memcontainers/programs/luau/glue:wasi_adapter_link) and fails; with it, the chain is
    # skipped as incompatible off-wasm32, while luau's wasm32 transition still builds it.
    target_compatible_with = ["@platforms//cpu:wasm32"],
    visibility = ["//visibility:public"],
    deps = [
        "//memcontainers/contracts:constants_rust",
        "//memcontainers/contracts:mc_rust",
    ],
)

# Assert the adapter compiles for wasm32 (this is the standalone compile gate, mirroring the
# sysroot's; the object + the conversion bring it into the box build).
wasm32_build_test(
    name = "wasi_adapter_wasm32",
    lib = ":wasi_adapter",
)
