load("@rules_rust//rust:defs.bzl", "rust_binary")

# programs/coreutils — ONE std Rust coreutils crate compiled four times into the per-tier
# mcbox-{isolated,readonly,readwrite,full} boxes (VISION §16.3). It builds for wasm32-wasi (the
# uutils + ripgrep crates it links are std); the //wasi-adapter then rewrites each box's
# wasi_snapshot_preview1 imports to `mc`, so the shipped box imports only `mc` and is attested
# (§16.4) against its tier's syscalls. Here we build the four boxes (the compile + link gate);
# the wasi-adapter conversion, the mc_attest gate, size_limit, and the roster→/bin-symlink rule
# land in //programs:defs.bzl. @guest_crates resolves the guests' std external deps.
exports_files(["Cargo.toml", "Cargo.lock"])

# The std crates every box links (uutils + ripgrep), plus //sysroot for the hand-written tools'
# mc-direct I/O (cat). Resolved from @guest_crates (wasm32-wasi std).
_BOX_DEPS = [
    "//sysroot",  # generated mc imports + ported safe wrappers (§16.2), for cat
    "@guest_crates//:uucore",  # uutils common plumbing + Args/locale, shared by every applet
    "@guest_crates//:uu_base64",  # base64 = uu_base64::uumain, as-is
    "@guest_crates//:clap",  # flag parsing + --help, reused by the hand-written tools
    "@guest_crates//:grep-searcher",  # ripgrep search engine, for grep
    "@guest_crates//:grep-regex",  # ripgrep regex matcher, for grep
    "@guest_crates//:walkdir",  # recursive directory walk, for grep -r
]

# Cumulative tier features: a box at tier T enables T and every lower tier, so a
# #[cfg(feature = "tier_readonly")] applet lands in readonly/readwrite/full — never isolated.
_TIERS = {
    "isolated": ["tier_isolated"],
    "readonly": ["tier_isolated", "tier_readonly"],
    "readwrite": ["tier_isolated", "tier_readonly", "tier_readwrite"],
    "full": ["tier_isolated", "tier_readonly", "tier_readwrite", "tier_full"],
}

[
    rust_binary(
        name = "mcbox-" + tier,
        srcs = glob(["src/**/*.rs"]),
        crate_name = "coreutils",
        crate_root = "src/main.rs",
        edition = "2021",
        crate_features = feats,
        # Built under --platforms=//platforms:wasm32_wasi (a std/wasi crate has no native build);
        # //... reaches it through the wasi-adapter conversion target in //programs:defs.bzl.
        tags = ["manual"],
        deps = _BOX_DEPS,
        visibility = ["//visibility:public"],
    )
    for tier, feats in _TIERS.items()
]
