load("//wasi-adapter:defs.bzl", "mc_box")

# programs/coreutils — ONE std Rust coreutils crate compiled four times into the per-tier
# mcbox-{isolated,readonly,readwrite,full} boxes (VISION §16.3). It builds for wasm32-wasi (the
# uutils + ripgrep crates it links are std); `mc_box` then link-injects the //wasi-adapter and
# drives the trampoline fixpoint, so each shipped box imports ONLY `mc` and is attestable (§16.4)
# against its tier's syscalls. @guest_crates resolves the guests' std external deps.
exports_files(["Cargo.toml", "Cargo.lock"])

# The std crates every box links (uutils + ripgrep), plus //sysroot for the hand-written tools'
# mc-direct I/O (cat). Resolved from @guest_crates (wasm32-wasi std).
_BOX_DEPS = [
    "//sysroot",  # generated mc imports + ported safe wrappers (§16.2), for cat
    "@guest_crates//:uucore",  # uutils common plumbing + Args/locale, shared by every applet
    "@guest_crates//:clap",  # flag parsing + --help, reused by the hand-written tools
    "@guest_crates//:grep-searcher",  # ripgrep search engine, for grep
    "@guest_crates//:grep-regex",  # ripgrep regex matcher, for grep
    "@guest_crates//:walkdir",  # recursive directory walk, for grep -r
    # uutils used AS-IS via uu_<name>::uumain (the mcbox! list routes them; unused ones GC out of
    # a box whose tier doesn't enable them).
    "@guest_crates//:uu_base64",
    "@guest_crates//:uu_sha256sum",
    "@guest_crates//:uu_sha1sum",
    "@guest_crates//:uu_sha512sum",
    "@guest_crates//:uu_md5sum",
    "@guest_crates//:uu_b2sum",
    "@guest_crates//:uu_cksum",
    "@guest_crates//:uu_sum",
    "@guest_crates//:uu_base32",
    "@guest_crates//:uu_basenc",
    "@guest_crates//:uu_comm",
    "@guest_crates//:uu_join",
    "@guest_crates//:uu_paste",
    "@guest_crates//:uu_fmt",
    "@guest_crates//:uu_expand",
    "@guest_crates//:uu_unexpand",
    "@guest_crates//:uu_od",
    "@guest_crates//:uu_factor",
    "@guest_crates//:uu_numfmt",
    "@guest_crates//:uu_tsort",
    "@guest_crates//:uu_date",
    "@guest_crates//:uu_shuf",
    "@guest_crates//:uu_pathchk",
    "@guest_crates//:uu_split",
    "@guest_crates//:uu_csplit",
]

# Cumulative tier features: a box at tier T enables T and every lower tier, so a
# #[cfg(feature = "tier_readonly")] applet lands in readonly/readwrite/full — never isolated.
_TIERS = {
    "isolated": ["tier_isolated"],
    "readonly": ["tier_isolated", "tier_readonly"],
    "readwrite": ["tier_isolated", "tier_readonly", "tier_readwrite"],
    "full": ["tier_isolated", "tier_readonly", "tier_readwrite", "tier_full"],
}

# Each box: build the crate for wasm32-wasi, link-inject the adapter, and trampoline-relink to a
# pure-`mc` fixpoint (//wasi-adapter:defs.bzl). Built under --platforms=//platforms:wasm32_wasi.
[
    mc_box(
        name = "mcbox-" + tier,
        srcs = glob(["src/**/*.rs"]),
        crate_root = "src/main.rs",
        crate_name = "coreutils",
        crate_features = feats,
        deps = _BOX_DEPS,
        visibility = ["//visibility:public"],
    )
    for tier, feats in _TIERS.items()
]
